Added class Ray

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ set(WAVE_SOURCE_LIST
     ${WAVE_PCH_H} 
     ${WAVE_PCH_CPP} 
     "${STB}/stb_image_write.h"
+    "math/math.h"
+    "ray/ray.h"
+    "ray/ray.cpp"
     "util/util.h"
     "util/logger/logger.h"
     "util/logger/logger.cpp"
